# Paint-For-Kids

./: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  DEFS.h  PT Project.psess  PT Project171208.vsp  PT Project171226.vsp  PT-Project.sln  PT-Project.vcxproj  PT-Project.vcxproj.filters  README.md  main.cpp
Actions/: Action.h  AddCircleAction.cpp  AddCircleAction.h  AddLineAction.cpp  AddLineAction.h  AddRectAction.cpp  AddRectAction.h  AddTriangleAction.cpp  AddTriangleAction.h  ChanDrawCol.cpp  ChanDrawCol.h  ChanFillCol.cpp  ChanFillCol.h  CopyAction.cpp  CopyAction.h  CutAction.cpp  CutAction.h  DeleteAction.cpp  DeleteAction.h  LoadAction.cpp  LoadAction.h  PasteAction.cpp  PasteAction.h  SaveAction.cpp  SaveAction.h  SelectAction.cpp  SelectAction.h  To_Draw.cpp  To_Draw.h  pickboth.cpp  pickboth.h  pickcolor.cpp  pickcolor.h  pickshape.cpp  pickshape.h  playmode.cpp  playmode.h
Figures/: CCircle.cpp  CCircle.h  CFigure.cpp  CFigure.h  CRectangle.cpp  CRectangle.h  Line.cpp  Line.h  Triangle.cpp  Triangle.h
GUI/: Input.cpp  Input.h  Output.cpp  Output.h  UI_Info.h
Saved/: graph1.txt  graph2.txt  graph3.txt  graph4.txt
images/: Thumbs.db
images/MenuItems/: Thumbs.db
